# eventcore

./: README.md  dub.sdl  meson.build  meson_options.txt  run-ci.sh  travis-ci.sh
.github/workflows/: ci.yml
source/eventcore/: core.d  driver.d  meson.build
source/eventcore/drivers/: threadedfile.d  timer.d
source/eventcore/drivers/posix/: cfrunloop.d  dns.d  driver.d  epoll.d  events.d  kqueue.d  pipes.d  processes.d  select.d  signals.d  sockets.d  uring.d  watchers.d
source/eventcore/drivers/posix/io_uring/: files.d  io_uring.d
source/eventcore/drivers/winapi/: core.d  dns.d  driver.d  events.d  files.d  sockets.d
source/eventcore/internal/: consumablequeue.d  corefoundation.d  coreservices.d  ioworker.d  utils.d  win32.d
tests/: 0-dirwatcher-rec.d  0-file.d  0-tcp-cancel.d  0-timer.d  0-udp-cancel.d  issue-25-periodic-timers.d
