sources = files(
	'core.d',
	'driver.d',
	'drivers/libasync.d',
	'drivers/posix/cfrunloop.d',
	'drivers/posix/dns.d',
	'drivers/posix/driver.d',
	'drivers/posix/epoll.d',
	'drivers/posix/events.d',
	'drivers/posix/kqueue.d',
	'drivers/posix/pipes.d',
	'drivers/posix/processes.d',
	'drivers/posix/select.d',
	'drivers/posix/signals.d',
	'drivers/posix/sockets.d',
	'drivers/posix/watchers.d',
	'drivers/threadedfile.d',
	'drivers/timer.d',
	'drivers/winapi/core.d',
	'drivers/winapi/dns.d',
	'drivers/winapi/driver.d',
	'drivers/winapi/events.d',
	'drivers/winapi/files.d',
	'drivers/winapi/pipes.d',
	'drivers/winapi/processes.d',
	'drivers/winapi/signals.d',
	'drivers/winapi/sockets.d',
	'drivers/winapi/watchers.d',
	'internal/consumablequeue.d',
	'internal/corefoundation.d',
	'internal/dlist.d',
	'internal/ioworker.d',
	'internal/utils.d',
	'internal/win32.d',
	'socket.d',
)
